office hours changes

--- a/form.html
+++ b/form.html
@@ -2,7 +2,7 @@
 <html>
 <head><title>Geolocation service by kwalsh</title></head>
 <body>
-  <h1>Welcome to kwalsh's geolocation service</h1>
+  <h1>Welcome to tatoonie's geolocation service</h1>
 
   <p>You are connected to
       <font color="blue">54.164.108.142 / Amazon AWS, located in Charlottesville (us-east-1a)</font>.
