fixed webpage display

--- a/form.html
+++ b/form.html
@@ -1,11 +1,11 @@
 
 <html>
-<head><title>Geolocation service by kwalsh</title></head>
+<head><title>Geolocation service by John and Anthony</title></head>
 <body>
-  <h1>Welcome to tatoonie's geolocation service</h1>
+  <h1>Welcome to Tatoonie's geolocation service</h1>
 
   <p>You are connected to
-      <font color="blue">54.164.108.142 / Amazon AWS, located in Charlottesville (us-east-1a)</font>.
+      <font color="blue">104.199.47.244 / Google GCP, located in Charlottesville (us-east-1a)</font>.
 
   <p>There are currently 9 active pinger clients:</p>
 
