--- a/form.html
+++ b/form.html
@@ -5,27 +5,20 @@
   <h1>Welcome to Tatoonie's geolocation service</h1>
 
   <p>You are connected to
-      <font color="blue">104.199.47.244 / Google GCP, located in Charlottesville (us-east-1a)</font>.
+      <font color="blue">104.199.47.244 / Google GCP, located in St. Ghislain (europe-west1-b)</font>.
 
-  <p>There are currently 9 active pinger clients:</p>
+  <p>There are currently 2 active pinger clients:</p>
 
   <font color="blue">
   <pre>
-    54.164.108.149 / Amazon AWS, located in Charlottesville (us-east-1a)
-    54.67.71.105 / Amazon AWS, located in Palo Alto (us-west-1a)
-    54.67.70.218 / Amazon AWS, located in Palo Alto (us-west-1c)
-    54.77.232.9 / Amazon AWS, located in Ireland (eu-west-1a)
-    54.93.89.20 / Amazon AWS, located in Frankfurt (eu-central-1b)
-    54.169.162.132 / Amazon AWS, located in Singapore (ap-southeast-1a)
-    35.182.206.219 / Google GCP, located in Changhua County, Taiwan (asia-east1-b)
-    35.187.110.135 / Google GCP, located in Berkeley County, South Carolina (us-east1)
-    35.195.85.91 / Google GCP, located in St. Ghislain, Belgium (europe-west1)
+    104.199.244.68 / "mordor" / Google GCP, located in Changhua County (asia-east1-a)
+    35.187.207.40 / "serenity" / Google GCP, located in Tokyo (asia-northeast1-b)
   </pre>
   </font>
 
   <p>
     <form action="/geolocate" method="GET">
-      Enter a url:
+      Enter a url to locate:
       <input type="text" name="target" size="80" value="http://www.something.com/index.html">
       <input type="submit">
     </form>
