aws changes and fastest adjustments

--- a/form.html
+++ b/form.html
@@ -13,6 +13,7 @@
   <pre>
     104.199.244.68 / "mordor" / Google GCP, located in Changhua County (asia-east1-a)
     35.187.207.40 / "serenity" / Google GCP, located in Tokyo (asia-northeast1-b)
+    54.183.219.225 / "Hoth' / Amazon AWS, located in Palo Alto (us-west-1)
   </pre>
   </font>
 
